// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo role export "frodo role export --all": should export all roles to a single file. 1`] = `0`;

exports[`frodo role export "frodo role export --all": should export all roles to a single file. 2`] = `""`;

exports[`frodo role export "frodo role export --all": should export all roles to a single file.: allInternalRoles.internalRole.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
    "openidm-admin": {
      "_id": "openidm-admin",
      "condition": null,
      "description": "Administrative access",
      "name": "openidm-admin",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-authorized": {
      "_id": "openidm-authorized",
      "condition": null,
      "description": "Basic minimum user",
      "name": "openidm-authorized",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-cert": {
      "_id": "openidm-cert",
      "condition": null,
      "description": "Authenticated via certificate",
      "name": "openidm-cert",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-reg": {
      "_id": "openidm-reg",
      "condition": null,
      "description": "Anonymous access",
      "name": "openidm-reg",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-tasks-manager": {
      "_id": "openidm-tasks-manager",
      "condition": null,
      "description": "Allowed to reassign workflow tasks",
      "name": "openidm-tasks-manager",
      "privileges": [],
      "temporalConstraints": [],
    },
    "platform-provisioning": {
      "_id": "platform-provisioning",
      "condition": null,
      "description": "Platform provisioning access",
      "name": "platform-provisioning",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files 1`] = `0`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files 2`] = `""`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/openidm-admin.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-admin": {
      "_id": "openidm-admin",
      "condition": null,
      "description": "Administrative access",
      "name": "openidm-admin",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/openidm-authorized.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-authorized": {
      "_id": "openidm-authorized",
      "condition": null,
      "description": "Basic minimum user",
      "name": "openidm-authorized",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/openidm-cert.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-cert": {
      "_id": "openidm-cert",
      "condition": null,
      "description": "Authenticated via certificate",
      "name": "openidm-cert",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/openidm-reg.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-reg": {
      "_id": "openidm-reg",
      "condition": null,
      "description": "Anonymous access",
      "name": "openidm-reg",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/openidm-tasks-manager.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-tasks-manager": {
      "_id": "openidm-tasks-manager",
      "condition": null,
      "description": "Allowed to reassign workflow tasks",
      "name": "openidm-tasks-manager",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/platform-provisioning.internalRole.json 1`] = `
{
  "internalRole": {
    "platform-provisioning": {
      "_id": "platform-provisioning",
      "condition": null,
      "description": "Platform provisioning access",
      "name": "platform-provisioning",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --all-separate --directory roleExportTestDir2": should export all roles to separate files: roleExportTestDir2/test-internal-role.internalRole.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --role-id ccb11ba1-333b-4197-95db-89bb08a2ab56": should export the role with role id "ccb11ba1-333b-4197-95db-89bb08a2ab56". 1`] = `0`;

exports[`frodo role export "frodo role export --role-id ccb11ba1-333b-4197-95db-89bb08a2ab56": should export the role with role id "ccb11ba1-333b-4197-95db-89bb08a2ab56". 2`] = `""`;

exports[`frodo role export "frodo role export --role-id ccb11ba1-333b-4197-95db-89bb08a2ab56": should export the role with role id "ccb11ba1-333b-4197-95db-89bb08a2ab56".: ccb11ba1-333b-4197-95db-89bb08a2ab56.internalRole.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export --role-name test-internal-role --file roleExportTestFile2.json --no-metadata": should export the role with name "test-internal-role". 1`] = `0`;

exports[`frodo role export "frodo role export --role-name test-internal-role --file roleExportTestFile2.json --no-metadata": should export the role with name "test-internal-role". 2`] = `""`;

exports[`frodo role export "frodo role export --role-name test-internal-role --file roleExportTestFile2.json --no-metadata": should export the role with name "test-internal-role".: roleExportTestFile2.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files 1`] = `0`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files 2`] = `""`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files: roleExportTestDir3/openidm-admin.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-admin": {
      "_id": "openidm-admin",
      "condition": null,
      "description": "Administrative access",
      "name": "openidm-admin",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files: roleExportTestDir3/openidm-authorized.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-authorized": {
      "_id": "openidm-authorized",
      "condition": null,
      "description": "Basic minimum user",
      "name": "openidm-authorized",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files: roleExportTestDir3/openidm-cert.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-cert": {
      "_id": "openidm-cert",
      "condition": null,
      "description": "Authenticated via certificate",
      "name": "openidm-cert",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files: roleExportTestDir3/openidm-reg.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-reg": {
      "_id": "openidm-reg",
      "condition": null,
      "description": "Anonymous access",
      "name": "openidm-reg",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files: roleExportTestDir3/openidm-tasks-manager.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-tasks-manager": {
      "_id": "openidm-tasks-manager",
      "condition": null,
      "description": "Allowed to reassign workflow tasks",
      "name": "openidm-tasks-manager",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -AD roleExportTestDir3 -m idm": should export all idm roles to separate files: roleExportTestDir3/platform-provisioning.internalRole.json 1`] = `
{
  "internalRole": {
    "platform-provisioning": {
      "_id": "platform-provisioning",
      "condition": null,
      "description": "Platform provisioning access",
      "name": "platform-provisioning",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files 1`] = `0`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files 2`] = `""`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/openidm-admin.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-admin": {
      "_id": "openidm-admin",
      "condition": null,
      "description": "Administrative access",
      "name": "openidm-admin",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/openidm-authorized.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-authorized": {
      "_id": "openidm-authorized",
      "condition": null,
      "description": "Basic minimum user",
      "name": "openidm-authorized",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/openidm-cert.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-cert": {
      "_id": "openidm-cert",
      "condition": null,
      "description": "Authenticated via certificate",
      "name": "openidm-cert",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/openidm-reg.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-reg": {
      "_id": "openidm-reg",
      "condition": null,
      "description": "Anonymous access",
      "name": "openidm-reg",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/openidm-tasks-manager.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-tasks-manager": {
      "_id": "openidm-tasks-manager",
      "condition": null,
      "description": "Allowed to reassign workflow tasks",
      "name": "openidm-tasks-manager",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/platform-provisioning.internalRole.json 1`] = `
{
  "internalRole": {
    "platform-provisioning": {
      "_id": "platform-provisioning",
      "condition": null,
      "description": "Platform provisioning access",
      "name": "platform-provisioning",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -AND roleExportTestDir1": should export all roles to separate files: roleExportTestDir1/test-internal-role.internalRole.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
  },
}
`;

exports[`frodo role export "frodo role export -aD roleExportTestDir4 -m idm ": should export all idm roles to one file 1`] = `0`;

exports[`frodo role export "frodo role export -aD roleExportTestDir4 -m idm ": should export all idm roles to one file 2`] = `""`;

exports[`frodo role export "frodo role export -aD roleExportTestDir4 -m idm ": should export all idm roles to one file: roleExportTestDir4/allInternalRoles.internalRole.json 1`] = `
{
  "internalRole": {
    "openidm-admin": {
      "_id": "openidm-admin",
      "condition": null,
      "description": "Administrative access",
      "name": "openidm-admin",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-authorized": {
      "_id": "openidm-authorized",
      "condition": null,
      "description": "Basic minimum user",
      "name": "openidm-authorized",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-cert": {
      "_id": "openidm-cert",
      "condition": null,
      "description": "Authenticated via certificate",
      "name": "openidm-cert",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-reg": {
      "_id": "openidm-reg",
      "condition": null,
      "description": "Anonymous access",
      "name": "openidm-reg",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-tasks-manager": {
      "_id": "openidm-tasks-manager",
      "condition": null,
      "description": "Allowed to reassign workflow tasks",
      "name": "openidm-tasks-manager",
      "privileges": [],
      "temporalConstraints": [],
    },
    "platform-provisioning": {
      "_id": "platform-provisioning",
      "condition": null,
      "description": "Platform provisioning access",
      "name": "platform-provisioning",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo role export "frodo role export -aNf roleExportTestFile3.json": should export all roles to a single file. 1`] = `0`;

exports[`frodo role export "frodo role export -aNf roleExportTestFile3.json": should export all roles to a single file. 2`] = `""`;

exports[`frodo role export "frodo role export -aNf roleExportTestFile3.json": should export all roles to a single file.: roleExportTestFile3.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
    "openidm-admin": {
      "_id": "openidm-admin",
      "condition": null,
      "description": "Administrative access",
      "name": "openidm-admin",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-authorized": {
      "_id": "openidm-authorized",
      "condition": null,
      "description": "Basic minimum user",
      "name": "openidm-authorized",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-cert": {
      "_id": "openidm-cert",
      "condition": null,
      "description": "Authenticated via certificate",
      "name": "openidm-cert",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-reg": {
      "_id": "openidm-reg",
      "condition": null,
      "description": "Anonymous access",
      "name": "openidm-reg",
      "privileges": [],
      "temporalConstraints": [],
    },
    "openidm-tasks-manager": {
      "_id": "openidm-tasks-manager",
      "condition": null,
      "description": "Allowed to reassign workflow tasks",
      "name": "openidm-tasks-manager",
      "privileges": [],
      "temporalConstraints": [],
    },
    "platform-provisioning": {
      "_id": "platform-provisioning",
      "condition": null,
      "description": "Platform provisioning access",
      "name": "platform-provisioning",
      "privileges": [],
      "temporalConstraints": [],
    },
  },
}
`;

exports[`frodo role export "frodo role export -i ccb11ba1-333b-4197-95db-89bb08a2ab56 -f roleExportTestFile1.json -N": should export the role with role id "ccb11ba1-333b-4197-95db-89bb08a2ab56" 1`] = `0`;

exports[`frodo role export "frodo role export -i ccb11ba1-333b-4197-95db-89bb08a2ab56 -f roleExportTestFile1.json -N": should export the role with role id "ccb11ba1-333b-4197-95db-89bb08a2ab56" 2`] = `""`;

exports[`frodo role export "frodo role export -i ccb11ba1-333b-4197-95db-89bb08a2ab56 -f roleExportTestFile1.json -N": should export the role with role id "ccb11ba1-333b-4197-95db-89bb08a2ab56": roleExportTestFile1.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
  },
}
`;

exports[`frodo role export "frodo role export -n test-internal-role": should export the role with name "test-internal-role". 1`] = `0`;

exports[`frodo role export "frodo role export -n test-internal-role": should export the role with name "test-internal-role". 2`] = `""`;

exports[`frodo role export "frodo role export -n test-internal-role": should export the role with name "test-internal-role".: test-internal-role.internalRole.json 1`] = `
{
  "internalRole": {
    "ccb11ba1-333b-4197-95db-89bb08a2ab56": {
      "_id": "ccb11ba1-333b-4197-95db-89bb08a2ab56",
      "condition": "/description co "somerandomstring"",
      "description": "A test internal role",
      "name": "test-internal-role",
      "privileges": [
        {
          "accessFlags": [
            {
              "attribute": "userName",
              "readOnly": false,
            },
            {
              "attribute": "givenName",
              "readOnly": false,
            },
            {
              "attribute": "cn",
              "readOnly": false,
            },
            {
              "attribute": "sn",
              "readOnly": false,
            },
            {
              "attribute": "mail",
              "readOnly": false,
            },
            {
              "attribute": "profileImage",
              "readOnly": true,
            },
            {
              "attribute": "description",
              "readOnly": false,
            },
            {
              "attribute": "accountStatus",
              "readOnly": true,
            },
            {
              "attribute": "telephoneNumber",
              "readOnly": true,
            },
            {
              "attribute": "postalAddress",
              "readOnly": true,
            },
            {
              "attribute": "city",
              "readOnly": true,
            },
            {
              "attribute": "postalCode",
              "readOnly": true,
            },
            {
              "attribute": "country",
              "readOnly": true,
            },
            {
              "attribute": "stateProvince",
              "readOnly": true,
            },
            {
              "attribute": "roles",
              "readOnly": true,
            },
            {
              "attribute": "assignments",
              "readOnly": true,
            },
            {
              "attribute": "groups",
              "readOnly": true,
            },
            {
              "attribute": "applications",
              "readOnly": true,
            },
            {
              "attribute": "manager",
              "readOnly": true,
            },
            {
              "attribute": "authzRoles",
              "readOnly": true,
            },
            {
              "attribute": "reports",
              "readOnly": true,
            },
            {
              "attribute": "effectiveRoles",
              "readOnly": true,
            },
            {
              "attribute": "effectiveAssignments",
              "readOnly": true,
            },
            {
              "attribute": "effectiveGroups",
              "readOnly": true,
            },
            {
              "attribute": "effectiveApplications",
              "readOnly": true,
            },
            {
              "attribute": "lastSync",
              "readOnly": true,
            },
            {
              "attribute": "kbaInfo",
              "readOnly": true,
            },
            {
              "attribute": "preferences",
              "readOnly": true,
            },
            {
              "attribute": "consentedMappings",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "adminOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrg",
              "readOnly": true,
            },
            {
              "attribute": "memberOfOrgIDs",
              "readOnly": true,
            },
            {
              "attribute": "ownerOfApp",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedString5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedMultivalued5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedDate5",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frIndexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger1",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger2",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger3",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger4",
              "readOnly": true,
            },
            {
              "attribute": "frUnindexedInteger5",
              "readOnly": true,
            },
            {
              "attribute": "assignedDashboard",
              "readOnly": true,
            },
          ],
          "actions": [],
          "filter": "/userName co "test"",
          "name": "Alpha realm - Users",
          "path": "managed/alpha_user",
          "permissions": [
            "VIEW",
            "UPDATE",
            "CREATE",
          ],
        },
      ],
      "temporalConstraints": [
        {
          "duration": "2024-11-04T12:45:00.000Z/2100-12-01T12:45:00.000Z",
        },
      ],
    },
  },
  "meta": Any<Object>,
}
`;
